[추가] html meta data

--- a/100daySite/index.html
+++ b/100daySite/index.html
@@ -1,22 +1,31 @@
-<style>
-    h1 {
-        font-family: sans-serif;
-        text-align: center;
-        color: rgb(83, 55, 75)
-    }
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        h1 {
+            font-family: sans-serif;
+            text-align: center;
+            color: rgb(83, 55, 75)
+        }
 
-    p {
-        font-family: sans-serif;
-        text-align: center;
-        color: #534b4b;
-    }
-</style>
-<h1>
-    Web Challenge for Sunday, April 17th
-</h1>
-<p>
-    Learn about the basics of web development - specifically dive into HTML & CSS.
-</p>
-<p>
-    I'll achieve this goal by diving into <a href="https://www.google.com">more learning resources</a>.
-</p>
+        p {
+            font-family: sans-serif;
+            text-align: center;
+            color: #534b4b;
+        }
+    </style>
+</head>
+<title>My Daily Challenge</title>
+<body>
+    <h1>
+        Web Challenge for Sunday, April 17th
+    </h1>
+    <p>
+        Learn about the basics of web development - specifically dive into HTML & CSS.
+    </p>
+    <p>
+        I'll achieve this goal by diving into <a href="https://www.google.com">more learning resources</a>.
+    </p>
+</body>
+
+</html>
