[4Days] 기본 CSS 사용

--- a/100daySite/index.html
+++ b/100daySite/index.html
@@ -1,26 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <style>
-        h1 {
-            font-family: sans-serif;
-            text-align: center;
-            color: rgb(83, 55, 75)
-        }
-
-        p {
-            font-family: sans-serif;
-            text-align: center;
-            color: #534b4b;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Oswald:wght@700&display=swap" rel="stylesheet">
 </head>
 <title>My Daily Challenge</title>
 <body>
     <h1>
         Web Challenge for Sunday, April 17th
     </h1>
-    <p>
+    <p id="todays-challenge">
         Learn about the basics of web development - specifically dive into HTML & CSS.
     </p>
     <p>
