--- a/100daySite/full-week.html
+++ b/100daySite/full-week.html
@@ -2,24 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>My Upcoming Challenges</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Oswald:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/shared.css">
-    <link rel="stylesheet" href="styles/style.css">
-    <title>My Daily Challenge</title>
+    <link rel="stylesheet" href="styles/full-week.css">
 </head>
 <body>
-    <img src="images/challenges-trophy.jpg" alt="A trophy">
-    <h1>
-        Web Challenge for Sunday, April 17th
-    </h1>
-    <p id="todays-challenge">
-        Learn about the basics of web development - specifically dive into HTML & CSS.
-    </p>
-    <p>
-        Explore the <a href="full-week.html">full week</a>.
-    </p>
+    <h1>My Upcoming Challenges</h1>
+    <a href="index.html">View Today's Challenge</a>
+    <p>Repeat what I learned about HTML & CSS</p>
+    <p>Do the exercises on HTML & CSS</p>
+    <p>Dive deeper into HTML & CSS and build more complex websites</p>
 </body>
-
 </html>
