[8Days] HTML 레이아웃

--- a/100daySite/full-week.html
+++ b/100daySite/full-week.html
@@ -36,6 +36,14 @@
                 <h2>Friday, April 5th</h2>
                 <p>Learn all about forms</p>
             </li>
+            <li>
+                <h2>Inheritance</h2>
+                <p>(Selectd) container rules apply to descendants</p>
+                <h2>Cascading Style Sheet</h2>
+                <p>Multiple ruls can be applied to the same element</p>
+                <h2>Specificity</h2>
+                <p>More specific selector's rule wins over less specific selector</p>
+            </li>
         </ol>
     </main>
 </body>
