--- a/100daySite/index.html
+++ b/100daySite/index.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Oswald:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Oswald:wght@700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles/shared.css">
     <link rel="stylesheet" href="styles/style.css">
     <title>My Daily Challenge</title>
 </head>
+
 <body>
-    <img src="images/challenges-trophy.jpg" alt="A trophy">
-    <h1>
-        Web Challenge for Sunday, April 17th
-    </h1>
-    <p id="todays-challenge">
-        Learn about the basics of web development - specifically dive into HTML & CSS.
-    </p>
-    <p>
-        Explore the <a href="full-week.html">full week</a>.
-    </p>
+    <main>
+        <img src="images/challenges-trophy.jpg" alt="A trophy">
+        <h1>
+            Web Challenge for <span>Sunday, April 17th</span>
+        </h1>
+        <p id="todays-challenge">
+            Learn about the basics of web development - specifically dive into HTML & CSS.
+        </p>
+    </main>
+    <footer>
+        <p>
+            Explore the <a href="full-week.html">full week</a>.
+        </p>
+    </footer>
 </body>
 
 </html>
