--- a/100daySite/full-week.html
+++ b/100daySite/full-week.html
@@ -10,6 +10,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="styles/shared.css">
     <link rel="stylesheet" href="styles/full-week.css">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
