--- a/100daySite/index.html
+++ b/100daySite/index.html
@@ -9,6 +9,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="styles/shared.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <title>My Daily Challenge</title>
 </head>
 
@@ -16,7 +17,7 @@
     <main>
         <img src="images/challenges-trophy.jpg" alt="A trophy">
         <h1>
-            Web Challenge for <span>Sunday, April 17th</span>
+            Web Challenge for <span>Sunday, April  17th</span>
         </h1>
         <p id="todays-challenge">
             Learn about the basics of web development - specifically dive into HTML & CSS.
@@ -25,6 +26,9 @@
     <footer>
         <p>
             Explore the <a href="full-week.html">full week</a>.
+        </p>
+        <p>
+            <a href="web-summary.html">web summary</a>
         </p>
     </footer>
 </body>
