[수정] 기존 프로젝트와 지금 프로젝트 합침 ㅋㅋ

--- a/travel_page/100daySite/index.html
+++ b/travel_page/100daySite/index.html
@@ -30,6 +30,9 @@
         <p>
             <a href="web-summary.html">web summary</a>
         </p>
+        <p>
+            <a href="/index.html">to Home   </a>
+        </p>
     </footer>
 </body>
 
