--- a/travel_page/index.html
+++ b/travel_page/index.html
@@ -16,6 +16,9 @@
         <div id="page-logo">
             <a href="index.html">Jin's Travel</a>
         </div>
+        <div>
+            <a href="/100daySite/index.html">dd</a>
+        </div>
         <nav></nav>
     </header>
     <main>
