[수정] 오타수정

--- a/travel_page/index.html
+++ b/travel_page/index.html
@@ -17,7 +17,7 @@
             <a href="index.html">Jin's Travel</a>
         </div>
         <div>
-            <a href="/100daySite/index.html">dd</a>
+            <a href="/100daySite/index.html">Web Challenge</a>
         </div>
         <nav></nav>
     </header>
