--- a/travel_page/index.html
+++ b/travel_page/index.html
@@ -16,10 +16,13 @@
         <div id="page-logo">
             <a href="index.html">Jin's Travel</a>
         </div>
-        <div>
-            <a href="/100daySite/index.html">Web Challenge</a>
-        </div>
-        <nav></nav>
+        <nav>
+            <ul>
+                <li><a href="/places.html">Destinations</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="/100daySite/index.html">Web Challenge</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section></section>
