--- a/travel_page/index.html
+++ b/travel_page/index.html
@@ -25,14 +25,8 @@
         </nav>
     </header>
     <main>
-        <section id="hero">
-            <h1>Jin's Travel Page</h1>
-            <p>Let's explore the world together</p>
-            <a href="/places.html">Discover places</a>
-        </section>
-        <section id="highlights">
-
-        </section>
+        <section></section>
+        <section></section>
     </main>
     <footer></footer>
 </body>
