[17Days] Flex Container

--- a/travel_page/index.html
+++ b/travel_page/index.html
@@ -33,7 +33,21 @@
             </div>
         </section>
         <section id="highlights">
-
+            <h2>HIGHLIGHTS</h2>
+            <ul id="destinations">
+                <li class="destination">
+                    <img src="/images/places/jeju1.jpg" alt="beach in Jeju">
+                    <p>Jeju <strong>Korea</strong></p>
+                </li>
+                <li class="destination">
+                    <img src="/images/places/munich.jpg" alt="Munich football stadium">
+                    <p>Munich <strong>Germany</strong></p>
+                </li>
+                <li class="destination">
+                    <img src="/images/places/barcelona.jpg" alt="Palm in Barcelona">
+                    <p>Barcelona <strong>Spain</strong></p>
+                </li>
+            </ul>
         </section>
     </main>
     <footer></footer>
