--- a/main/index.html
+++ b/main/index.html
@@ -7,6 +7,21 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>100Days Project</h1>
+    <header>
+        <div>
+            <h1>100Days Project</h1>
+        </div>
+    </header>
+    <main>
+        <section>
+            <h2>Project List</h2>
+            <ul>
+                <li>?</li>
+                <li>
+                    <a href="/travel_page/index.html">Travel Page</a>
+                </li>
+            </ul>
+        </section>
+    </main>
 </body>
 </html>
