--- a/main/index.html
+++ b/main/index.html
@@ -16,7 +16,9 @@
         <section>
             <h2>Project List</h2>
             <ul>
-                <li>?</li>
+                <li>
+                    <a href="/web_challenge/index.html">Web Challenge</a>
+                </li>
                 <li>
                     <a href="/travel_page/index.html">Travel Page</a>
                 </li>
