[18Days] Linear gradient

--- a/main/travel_page/index.html
+++ b/main/travel_page/index.html
@@ -50,6 +50,14 @@
         </section>
     </main>
     <footer>
+        <ul>
+            <li>
+                <a href="https://instagram.com"><img src="/travel_page/images/icons/insta.png" alt="instagram icon"></a>
+            </li>
+            <li>
+                <a href="https://www.faceboock.com"><img src="/travel_page/images/icons/facebook.png" alt="facebook icon"></a>
+            </li>
+        </ul>
         <div style="text-align: center; font-size: 20px; margin-bottom: 20px;">
             <a style="text-decoration: none" href="/index.html">Back to <strong>Main</strong></a>
         </div>
