--- a/main/travel_page/places.html
+++ b/main/travel_page/places.html
@@ -8,7 +8,7 @@
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Oleo+Script:wght@700&family=Quicksand:wght@300;500;700&display=swap"
         rel="stylesheet" />
     <link rel="stylesheet" href="shared.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="places.css">
 </head>
 
 <body>
@@ -36,9 +36,73 @@
                         saepe veritatis quas, omnis dignissimos voluptatem doloremque eveniet praesentium velit illo
                         quam dicta dolores ducimus accusamus.
                     </p>
+                    <div class="action">
+                        <a href="https://en.wikipedia.org/wiki/Barcelona">Explore</a>
+                    </div>
                 </div>
-                <div class="action">
-                    <a href="https://en.wikipedia.org/wiki/Barcelona">Explore</a>
+            </li>
+            <li>
+                <img src="/travel_page/images/places/barcelona.jpg" alt="City of Barcelona">
+                <div class="item-content">
+                    <h2>
+                        Hawaii
+                    </h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque facere hic, optio inventore modi
+                        saepe veritatis quas, omnis dignissimos voluptatem doloremque eveniet praesentium velit illo
+                        quam dicta dolores ducimus accusamus.
+                    </p>
+                    <div class="action">
+                        <a href="https://en.wikipedia.org/wiki/Barcelona">Explore</a>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <img src="/travel_page/images/places/barcelona.jpg" alt="City of Barcelona">
+                <div class="item-content">
+                    <h2>
+                        London
+                    </h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque facere hic, optio inventore modi
+                        saepe veritatis quas, omnis dignissimos voluptatem doloremque eveniet praesentium velit illo
+                        quam dicta dolores ducimus accusamus.
+                    </p>
+                    <div class="action">
+                        <a href="https://en.wikipedia.org/wiki/Barcelona">Explore</a>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <img src="/travel_page/images/places/jeju1.jpg" alt="City of Barcelona">
+                <div class="item-content">
+                    <h2>
+                        Jeju
+                    </h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque facere hic, optio inventore modi
+                        saepe veritatis quas, omnis dignissimos voluptatem doloremque eveniet praesentium velit illo
+                        quam dicta dolores ducimus accusamus.
+                    </p>
+                    <div class="action">
+                        <a href="https://en.wikipedia.org/wiki/Barcelona">Explore</a>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <img src="/travel_page/images/places/munich.jpg" alt="City of Barcelona">
+                <div class="item-content">
+                    <h2>
+                        Munich
+                    </h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque facere hic, optio inventore modi
+                        saepe veritatis quas, omnis dignissimos voluptatem doloremque eveniet praesentium velit illo
+                        quam dicta dolores ducimus accusamus.
+                    </p>
+                    <div class="action">
+                        <a href="https://en.wikipedia.org/wiki/Barcelona">Explore</a>
+                    </div>
                 </div>
             </li>
         </ul>
@@ -52,10 +116,10 @@
                 <a href="https://www.faceboock.com"><img src="/travel_page/images/icons/facebook.png"
                         alt="facebook icon"></a>
             </li>
+            <div style="text-align: center; font-size: 20px; margin-bottom: 20px;">
+                <a style="text-decoration: none" href="/index.html">Back to <strong>Main</strong></a>
+            </div>
         </ul>
-        <div style="text-align: center; font-size: 20px; margin-bottom: 20px;">
-            <a style="text-decoration: none" href="/index.html">Back to <strong>Main</strong></a>
-        </div>
     </footer>
 </body>
 
