--- a/main/travel_page/places.html
+++ b/main/travel_page/places.html
@@ -28,80 +28,95 @@
             <li>
                 <img src="/travel_page/images/places/barcelona.jpg" alt="City of Barcelona">
                 <div class="item-content">
-                    <h2>
-                        Barcelona
-                    </h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque facere hic, optio inventore modi
-                        saepe veritatis quas, omnis dignissimos voluptatem doloremque eveniet praesentium velit illo
-                        quam dicta dolores ducimus accusamus.
-                    </p>
+                    <div>
+                        <h2>
+                            Barcelona
+                        </h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque facere hic, optio inventore
+                            modi
+                            saepe veritatis quas, omnis dignissimos voluptatem doloremque eveniet praesentium velit illo
+                            quam dicta dolores ducimus accusamus.
+                        </p>
+                    </div>
                     <div class="action">
                         <a href="https://en.wikipedia.org/wiki/Barcelona">Explore</a>
                     </div>
                 </div>
             </li>
             <li>
-                <img src="/travel_page/images/places/barcelona.jpg" alt="City of Barcelona">
+                <img src="/travel_page/images/places/hawaii.jpg" alt="Beach of Hawaii">
                 <div class="item-content">
-                    <h2>
-                        Hawaii
-                    </h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque facere hic, optio inventore modi
-                        saepe veritatis quas, omnis dignissimos voluptatem doloremque eveniet praesentium velit illo
-                        quam dicta dolores ducimus accusamus.
-                    </p>
+                    <div>
+                        <h2>
+                            Hawaii
+                        </h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque facere hic, optio inventore
+                            modi
+                            saepe veritatis quas, omnis dignissimos voluptatem doloremque eveniet praesentium velit illo
+                            quam dicta dolores ducimus accusamus.
+                        </p>
+                    </div>
                     <div class="action">
-                        <a href="https://en.wikipedia.org/wiki/Barcelona">Explore</a>
+                        <a href="https://en.wikipedia.org/wiki/Hawaii">Explore</a>
                     </div>
                 </div>
             </li>
             <li>
-                <img src="/travel_page/images/places/barcelona.jpg" alt="City of Barcelona">
+                <img src="/travel_page/images/places/jeju1.jpg" alt="Beach of Jeju">
                 <div class="item-content">
-                    <h2>
-                        London
-                    </h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque facere hic, optio inventore modi
-                        saepe veritatis quas, omnis dignissimos voluptatem doloremque eveniet praesentium velit illo
-                        quam dicta dolores ducimus accusamus.
-                    </p>
+                    <div>
+                        <h2>
+                            Jeju
+                        </h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque facere hic, optio inventore
+                            modi
+                            saepe veritatis quas, omnis dignissimos voluptatem doloremque eveniet praesentium velit illo
+                            quam dicta dolores ducimus accusamus.
+                        </p>
+                    </div>
                     <div class="action">
-                        <a href="https://en.wikipedia.org/wiki/Barcelona">Explore</a>
+                        <a href="https://en.wikipedia.org/wiki/Jeju">Explore</a>
                     </div>
                 </div>
             </li>
             <li>
-                <img src="/travel_page/images/places/jeju1.jpg" alt="City of Barcelona">
+                <img src="/travel_page/images/places/munich.jpg" alt="Stadimu of Munich">
                 <div class="item-content">
-                    <h2>
-                        Jeju
-                    </h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque facere hic, optio inventore modi
-                        saepe veritatis quas, omnis dignissimos voluptatem doloremque eveniet praesentium velit illo
-                        quam dicta dolores ducimus accusamus.
-                    </p>
+                    <div>
+                        <h2>
+                            Munich
+                        </h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque facere hic, optio inventore
+                            modi
+                            saepe veritatis quas, omnis dignissimos voluptatem doloremque eveniet praesentium velit illo
+                            quam dicta dolores ducimus accusamus.
+                        </p>
+                    </div>
                     <div class="action">
-                        <a href="https://en.wikipedia.org/wiki/Barcelona">Explore</a>
+                        <a href="https://en.wikipedia.org/wiki/Munich">Explore</a>
                     </div>
                 </div>
             </li>
             <li>
-                <img src="/travel_page/images/places/munich.jpg" alt="City of Barcelona">
+                <img src="/travel_page/images/places/tokyo.jpg" alt="City of Tokyo">
                 <div class="item-content">
-                    <h2>
-                        Munich
-                    </h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque facere hic, optio inventore modi
-                        saepe veritatis quas, omnis dignissimos voluptatem doloremque eveniet praesentium velit illo
-                        quam dicta dolores ducimus accusamus.
-                    </p>
+                    <div>
+                        <h2>
+                            Tokyo
+                        </h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque facere hic, optio inventore
+                            modi
+                            saepe veritatis quas, omnis dignissimos voluptatem doloremque eveniet praesentium velit illo
+                            quam dicta dolores ducimus accusamus.
+                        </p>
+                    </div>
                     <div class="action">
-                        <a href="https://en.wikipedia.org/wiki/Barcelona">Explore</a>
+                        <a href="https://en.wikipedia.org/wiki/Tokyo">Explore</a>
                     </div>
                 </div>
             </li>
@@ -116,10 +131,10 @@
                 <a href="https://www.faceboock.com"><img src="/travel_page/images/icons/facebook.png"
                         alt="facebook icon"></a>
             </li>
-            <div style="text-align: center; font-size: 20px; margin-bottom: 20px;">
-                <a style="text-decoration: none" href="/index.html">Back to <strong>Main</strong></a>
-            </div>
         </ul>
+        <div style="text-align: center; font-size: 20px; margin-bottom: 20px;">
+            <a style="text-decoration: none" href="/index.html">Back to <strong>Main</strong></a>
+        </div>
     </footer>
 </body>
 
