[30Days] JS variables
variables: String, Number, Array, Object

--- a/main/index.html
+++ b/main/index.html
@@ -22,6 +22,9 @@
                 <li>
                     <a href="/travel_page/index.html">Travel Page</a>
                 </li>
+                <li>
+                    <a href="/first_js/index.html">JavaScript Introduction</a>
+                </li>
             </ul>
         </section>
     </main>
