--- a/main/travel_page/places.html
+++ b/main/travel_page/places.html
@@ -40,7 +40,7 @@
                         </p>
                     </div>
                     <div class="action">
-                        <a href="https://en.wikipedia.org/wiki/Barcelona">Explore</a>
+                        <a href="https://en.wikipedia.org/wiki/Barcelona">Explore &#x2192</a>
                     </div>
                 </div>
             </li>
@@ -59,7 +59,7 @@
                         </p>
                     </div>
                     <div class="action">
-                        <a href="https://en.wikipedia.org/wiki/Hawaii">Explore</a>
+                        <a href="https://en.wikipedia.org/wiki/Hawaii">Explore &#x2192</a>
                     </div>
                 </div>
             </li>
@@ -78,7 +78,7 @@
                         </p>
                     </div>
                     <div class="action">
-                        <a href="https://en.wikipedia.org/wiki/Jeju">Explore</a>
+                        <a href="https://en.wikipedia.org/wiki/Jeju">Explore &#x2192</a>
                     </div>
                 </div>
             </li>
@@ -97,7 +97,7 @@
                         </p>
                     </div>
                     <div class="action">
-                        <a href="https://en.wikipedia.org/wiki/Munich">Explore</a>
+                        <a href="https://en.wikipedia.org/wiki/Munich">Explore &#x2192</a>
                     </div>
                 </div>
             </li>
@@ -116,7 +116,7 @@
                         </p>
                     </div>
                     <div class="action">
-                        <a href="https://en.wikipedia.org/wiki/Tokyo">Explore</a>
+                        <a href="https://en.wikipedia.org/wiki/Tokyo">Explore &#x2192</a>
                     </div>
                 </div>
             </li>
