--- a/main/first_js/index.html
+++ b/main/first_js/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript Introduction</title>
     <script src="/first_js/app.js"></script>
+    <script src="/first_js/exercise.js"></script>
 </head>
 
 <body>
