[21Days] add Web_Food page

--- a/main/index.html
+++ b/main/index.html
@@ -23,6 +23,9 @@
                     <a href="/travel_page/index.html">Travel Page</a>
                 </li>
                 <li>
+                    <a href="/web_food/index.html">Web Food</a>
+                </li>
+                <li>
                     <a href="/first_js/index.html">JavaScript Introduction</a>
                 </li>
             </ul>
