[21Days] Web_Food HTML 구조

--- a/main/web_food/index.html
+++ b/main/web_food/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,10 @@
     <title>Web Food</title>
     <link rel="stylesheet" href="/web_food/common.css">
 </head>
+
 <body>
-    <header>
-        <h1>WebFood</h1>
+    <header id="main-header">
+        <a href="/index.html" id="logo">WebFood</a>
         <nav>
             <ul>
                 <li><a href="">Browse Meals</a></li>
@@ -18,11 +20,34 @@
         </nav>
     </header>
     <main>
-        <section>
-            <h2>Browse Our Delicious Meals</h2>
-            <div></div>
+        <section id="latest-products">
+            <h1>Browse Our Delicious Meals</h1>
+            <div>
+                <ul>
+                    <li class="food-items">
+                        <article>
+                            <img src="/web_food/images/risotto.jpg" alt="Risotto">
+                            <div class="food-item-content">
+                                <h2>Risotto with Tiger Prawns</h2>
+                                <a href="" class="btn">Add to Cart</a>
+                            </div>
+                        </article>
+                    </li>
+                    <li>
+                        <article>
+                            <img src="/web_food/images/cheeseburgers.jpg" alt="cheeseburgers">
+                            <div class="food-item-content">
+                                <h2>Risotto with Tiger Prawns</h2>
+                                <a href="" class="btn">Add to Cart</a>
+                            </div>
+                        </article>
+                    </li>
+                </ul>
+
+            </div>
         </section>
     </main>
     <footer></footer>
 </body>
+
 </html>
