--- a/main/first_js/index.html
+++ b/main/first_js/index.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript Introduction</title>
-    <script src="/first_js/app.js"></script>
-    <script src="/first_js/exercise.js"></script>
+    <script src="/first_js/operations.js"></script>
 </head>
 
 <body>
