--- a/main/web_food/index.html
+++ b/main/web_food/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Food</title>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Oleo+Script:wght@700&family=Quicksand:wght@300;500;700&display=swap"
+        rel="stylesheet" />
     <link rel="stylesheet" href="/web_food/common.css">
 </head>
 
@@ -47,7 +50,9 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <a href="/index.html">back to Main</a>
+    </footer>
 </body>
 
 </html>
