[33Days] JS DOM Concepts

--- a/main/index.html
+++ b/main/index.html
@@ -28,6 +28,9 @@
                 <li>
                     <a href="/first_js/index.html">JavaScript Introduction</a>
                 </li>
+                <li>
+                    <a href="/js_dom/index.html">JavaScript DOM</a>
+                </li>
             </ul>
         </section>
     </main>
