--- a/main/web_food/index.html
+++ b/main/web_food/index.html
@@ -23,31 +23,28 @@
         </nav>
     </header>
     <main>
+        <h1>Browse Our Delicious Meals</h1>
         <section id="latest-products">
-            <h1>Browse Our Delicious Meals</h1>
-            <div>
-                <ul>
-                    <li class="food-items">
-                        <article>
-                            <img src="/web_food/images/risotto.jpg" alt="Risotto">
-                            <div class="food-item-content">
-                                <h2>Risotto with Tiger Prawns</h2>
-                                <a href="" class="btn">Add to Cart</a>
-                            </div>
-                        </article>
-                    </li>
-                    <li>
-                        <article>
-                            <img src="/web_food/images/cheeseburgers.jpg" alt="cheeseburgers">
-                            <div class="food-item-content">
-                                <h2>Risotto with Tiger Prawns</h2>
-                                <a href="" class="btn">Add to Cart</a>
-                            </div>
-                        </article>
-                    </li>
-                </ul>
-
-            </div>
+            <ul>
+                <li class="food-items">
+                    <article>
+                        <img src="/web_food/images/risotto.jpg" alt="Risotto">
+                        <div class="food-item-content">
+                            <h2>Risotto with Tiger Prawns</h2>
+                            <a href="" class="btn">Add to Cart</a>
+                        </div>
+                    </article>
+                </li>
+                <li class="food-items">
+                    <article>
+                        <img src="/web_food/images/cheeseburgers.jpg" alt="cheeseburgers">
+                        <div class="food-item-content">
+                            <h2>Cheeseburger</h2>
+                            <a href="" class="btn">Add to Cart</a>
+                        </div>
+                    </article>
+                </li>
+            </ul>
         </section>
     </main>
     <footer>
