--- a/main/js_dom/index.html
+++ b/main/js_dom/index.html
@@ -10,5 +10,8 @@
 <body>
     <h1>Hi there!</h1>
     <p>This is a <a href="#">link</a></p>
+    <footer>
+        <a href="/index.html">main</a>
+    </footer>
 </body>
 </html>
