[34Days] JS Query DOM

--- a/main/js_dom/index.html
+++ b/main/js_dom/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="/js_dom/app.js" defer></script>
+    <script src="/js_dom/exercise.js" defer></script>
 </head>
 <body>
-    <h1>Hi there!</h1>
-    <p>This is a <a href="#">link</a></p>
+    <h1 id="title">Hi there!</h1>
+    <p class="content">This is a <a href="#">link</a></p>
     <footer>
-        <a href="/index.html">main</a>
+        <a id="external-link" href="/index.html">main</a>
     </footer>
 </body>
 </html>
