[35Days] Create Element

--- a/main/js_dom/index.html
+++ b/main/js_dom/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="/js_dom/app.js" defer></script>
-    <script src="/js_dom/exercise.js" defer></script>
+    <!-- <script src="/js_dom/exercise.js" defer></script> -->
 </head>
 <body>
     <h1 id="title">Hi there!</h1>
+    <p>I'm new</p>
     <p class="content">This is a <a href="#">link</a></p>
     <footer>
         <a id="external-link" href="/index.html">main</a>
