[35Days] Event - click

--- a/main/js_dom/index.html
+++ b/main/js_dom/index.html
@@ -9,9 +9,7 @@
     <!-- <script src="/js_dom/exercise.js" defer></script> -->
 </head>
 <body>
-    <h1 id="title">Hi there!</h1>
-    <p>I'm new</p>
-    <p class="content">This is a <a href="#">link</a></p>
+    <p>Click me!</p>
     <footer>
         <a id="external-link" href="/index.html">main</a>
     </footer>
