[35Days] Event - input

--- a/main/js_dom/index.html
+++ b/main/js_dom/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <p>Click me!</p>
+    <input type="text">
     <footer>
         <a id="external-link" href="/index.html">main</a>
     </footer>
