--- a/main/web_food/index.html
+++ b/main/web_food/index.html
@@ -21,13 +21,19 @@
                 <li><a href="">My Orders</a></li>
             </ul>
         </nav>
-        <a href="" class="menu-btn">
+        <a href="#side-drawer" class="menu-btn">
             <span></span>
             <span></span>
             <span></span>
         </a>
     </header>
     <aside id="side-drawer">
+        <header>
+            <a href="#" class="menu-btn">
+                <span></span>
+                <span></span>
+                <span></span>
+        </header>
         <nav>
             <ul>
                 <li><a href="">Browse Meals</a></li>
@@ -39,7 +45,7 @@
         <h1>Browse Our Delicious Meals</h1>
         <section id="latest-products">
             <ul>
-                <li class="food-items">
+                <li class="food-item">
                     <article>
                         <img src="/web_food/images/risotto.jpg" alt="Risotto">
                         <div class="food-item-content">
@@ -48,7 +54,7 @@
                         </div>
                     </article>
                 </li>
-                <li class="food-items">
+                <li class="food-item">
                     <article>
                         <img src="/web_food/images/cheeseburgers.jpg" alt="cheeseburgers">
                         <div class="food-item-content">
