--- a/main/js_dom/index.html
+++ b/main/js_dom/index.html
@@ -4,13 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="/js_dom/app.js" defer></script>
+    <title>Advanced Javascript</title>
+    <!-- <script src="/js_dom/app.js" defer></script> -->
+    <script src="/js_dom/demo.js" defer></script>
     <!-- <script src="/js_dom/exercise.js" defer></script> -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>Click me!</p>
-    <input type="text">
+    <form>
+        <div class="control">
+            <label for="product-name">Product Name</label>
+            <input type="text" id="product-name" name="product-name" maxlength="60">
+            <span id="charcount">
+                <span id="remaining-chars">60</span>/60
+            </span>
+        </div>
+        <button>Submit</button>
+    </form>
     <footer>
         <a id="external-link" href="/index.html">main</a>
     </footer>
